--- a/style/style.css
+++ b/style/style.css
@@ -1,20 +1,23 @@
 header {
     color: rgb(255, 255, 255);
-    background-color: rgb(222,184,135);
+    background-color: rgb(196, 180, 84);
     padding-bottom: 1px;
     padding-top: 3px;
     padding-left: 10px;
     font-family: serif, Algerian;
     letter-spacing: 2px;
 }
+
 nav {
     padding-bottom: 38px;
     margin: 10px;
     background-color: darkgray;
 }
+
 nav li {
     float: left;
 }
+
 nav li a {
     color: rgb(0, 0, 0);
     display: block;
@@ -22,23 +25,27 @@ nav li a {
     text-decoration: none;
     text-align: center;
 }
+
 nav li a:hover {
     color: rgb(255, 255, 255);
-    background-color: rgb(222,184,135);
+    background-color: rgb(196, 180, 84);
 }
+
 nav ul {
     color: rgb(0, 0, 0);
     list-style-type: none;
     overflow: visible;
 }
+
 footer {
     position: fixed;
     left: 0;
     bottom: 0;
-    background-color: rgb(222,184,135);
+    background-color: rgb(196, 180, 84);
     width: 100%;
     text-align: center;
 }
+
 main section {
     border-left: 6px solid rgb(196, 180, 84);
     background-color: darkgray;
@@ -52,4 +59,15 @@ main section {
     position: absolute;
     left: 600px;
     top: 160px;
+}
+
+img {
+    border-radius: 50px;
+    margin: 10px;
+}
+
+.image {
+    width: 400px;
+    height: 400px;
+    object-fit: cover;
 }
