--- a/style/style2.css
+++ b/style/style2.css
@@ -1,55 +1,97 @@
+html {
+    background-color: rgb(230, 217, 199);
+    color: rgb(74, 63, 50);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    letter-spacing: 0.3px;
+    font-size: 24px;
+}
+
 header {
     color: rgb(255, 255, 255);
-    background-color: rgb(222,184,135);
+    background-color: rgb(222, 184, 135);
     padding-bottom: 1px;
     padding-top: 3px;
-    padding-left: 10px;
-    font-family: serif, Algerian;
+    padding-right: 50px;
     letter-spacing: 2px;
+    border-radius: 30px;
+    text-align: right;
 }
+
 nav {
-    padding-bottom: 38px;
-    margin: 10px;
-    background-color: darkgray;
+
+    box-sizing: border-box;
+    padding-right: 38px;
+    margin-top: 20px;
+    border-radius: 50px;
+    background-color: rgb(222, 184, 135);
 }
+
 nav li {
-    float: left;
+    margin-right: 10px;
 }
+
 nav li a {
-    color: rgb(0, 0, 0);
-    display: block;
-    padding: 10px;
-    text-decoration: none;
-    text-align: center;
-}
-nav li a:hover {
     color: rgb(255, 255, 255);
-    background-color: rgb(196, 180, 84);
+    margin-bottom: 100px;
+    padding: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    display: block;
+    float: right;
+    text-decoration: none;
 }
+
+nav li a:hover {
+    color: rgb(74, 63, 50);
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 1px 10px rgb(74, 63, 50);
+    border-radius: 50px;
+}
+
 nav ul {
-    color: rgb(0, 0, 0);
+    color: rgb(74, 63, 50);
     list-style-type: none;
-    overflow: visible;
+    padding: 0;
+    padding-bottom: 48px;
 }
+
 footer {
     position: fixed;
     left: 0;
     bottom: 0;
-    background-color: rgb(196, 180, 84);
+    background-color: rgb(222, 184, 135);
     width: 100%;
     text-align: center;
 }
+
 main section {
-    border-left: 6px solid rgb(196, 180, 84);
-    background-color: darkgray;
-    border-radius: 100px;
+    position: absolute;
+    right: 0;
+    border-right: 8px solid rgb(222, 184, 135);
+    background-color: rgb(255, 255, 255);
+    border-radius: 30px;
     padding: 2%;
-    width: 30%;
+    width: 40%;
     margin: 30px;
+}
+
+section {
+    text-align: center;
+}
+
+img {
+    border-radius: 30px;
+    margin: 10px;
 }
 
 #second {
     position: absolute;
     left: 500px;
     top: 160px;
+}
+
+.image {
+    width: 500px;
+    height: 500px;
+    object-fit: cover;
 }
