--- a/jQuery/queryStyle.css
+++ b/jQuery/queryStyle.css
@@ -1,12 +1,11 @@
-div#txt1 {
+div#txt {
     width: 300px;
     border: solid 1px;
     position: relative;
     left: 0px;
     padding: 1%;
 }
-#earth {
-    margin: 10px;
-    width: 400px;
-    height: 320px;
+
+#png {
+    width: 300px;
 }
