--- a/web_html_css/style.css
+++ b/web_html_css/style.css
@@ -74,18 +74,14 @@ main section {
     margin-bottom: 50px;
     margin-left: 60%;
     margin-right: 0;
+    font-size: 18px;
 }
-
+.section {
+    text-align: left;
+    padding: 40px;
+}
 section {
     text-align: center;
-}
-
-#first {
-    text-align: left;
-}
-
-#second {
-    text-align: left;
 }
 
 .links {
@@ -115,6 +111,7 @@ img {
 }
 
 .image {
+    margin-top: 20px;
     max-width: 100%;
     height: auto;
 }
